<resources>
    <string name="app_name" translatable="false">FalconFit</string>
    <string name="machine">Máquinas</string>
    <string name="exercise">Ejercicio</string>
    <string name="superset">Superseries</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="include">Realizar</string>
    <string name="email">Correo electrónico\n</string>
    <string name="password">Contraseña\n</string>
    <string name="login">Inicia sesión</string>
    <string name="register">Registrate</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="title">Título</string>
    <string name="subtitle">Subtítulo</string>
    <string name="execute">Ejecutar</string>
    <string name="back">Volver</string>
    <string name="delete">Eliminar</string>
    <string name="update">Actualizar</string>
    <string name="confirm">Confirmar</string>
    <string name="selectExercises">Seleccionar ejercicios</string>
    <string name="user">Usuario</string>
    <string name="darkMode">Modo oscuro</string>
    <string name="logout">Cerrar sesión</string>
    <string name="change_language">Cambiar Idioma</string>
    <string name="error_invalid_credentials">Alguna de las credenciales es incorrecta</string>
    <string name="error_delete_exercises">Elimine ejercicios para continuar</string>
    <string name="error_add_exercises">Añada ejercicios para continuar</string>
    <string name="error_add_title">Añada un título</string>
    <string name="error_fill_all">Rellene todos los campos</string>
    <string name="error_average_error">Algo salió mal revise sus creedenciales</string>
    <string name="map">Ubicaciones</string>
    <string name="share">Compartir</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="scan_button">Botón escanear</string>
    <string name="imagen_ejercicio">Imagen Ejercicio</string>
    <string name="capture">Foto</string>
    <string name="add_button">Botón Añadir</string>
    <string name="profile_image">Imagen perfil</string>
    <string name="phone_number">Número teléfono</string>
    <string name="registration_date">Fecha registro</string>
    <string name="save_changes">Guardar</string>
    <string name="dialogTitle">¿Que prefiere?</string>
    <string name="autologin">Autologin</string>
    <string name="manual">Acceder manualmente</string>
    <string name="exerciseUpdated">Ejercicio actualizado</string>
    <string name="exerciseCreated">Ejercicio creado</string>
    <string name="cameraPermission">No tiene permisos de camara</string>
    <string name="notiPermission">No se enviaran notificaciones</string>
    <string name="ubiPermission">No tiene permisos de localizacion</string>
    <string name="cancel">Cancelado</string>
    <string name="invalidQr">Este QR no pertenece a ninguna de nuestras maquinas</string>
    <string name="centerdQr">Centra el QR dentro de la caja</string>
    <string name="supersetUpdated">Superset actualizado</string>
    <string name="supersetCreated">Superset creado</string>
    <string name="deleteExercise">¿Estas seguro que quieres eliminar este ejercicio?</string>
    <string name="deleteSuperset">¿Estas seguro que quieres eliminar esta superserie?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
</resources>