<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkThemeSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/darkMode"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/languageSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/darkThemeSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="#8B1A1A"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/languageSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
