<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.exercise.CreateExerciseFragment"
    android:id="@+id/createAnExerciseFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addSupersetTitle"
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/text_primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"
            android:maxLength="45"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/text_primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/addSupersetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subtitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            android:inputType="text"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"
            android:maxLength="45"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/text_primary"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            android:inputType="text"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"
            android:maxLength="45"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/createExerciseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"/>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/backToExerciseListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/createExerciseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backToExerciseListButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <Button
            style="@style/Widget.Material3.Button.Icon"
            android:id="@+id/select_photo_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/text_secondary"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/showCamera"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="16sp"
            app:icon="@drawable/ic_photolib"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="@color/text_primary"/>

        <Button
            style="@style/Widget.Material3.Button.Icon"
            android:id="@+id/showCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/text_secondary"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/select_photo_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="16sp"
            app:icon="@drawable/ic_camera"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="@color/text_primary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/exercise_image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:contentDescription="@string/imagen_ejercicio"
        app:layout_constraintTop_toBottomOf="@id/buttons_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>