<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.superset.CreateUpdateSupersetFragment"
    android:id="@+id/createSupersetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/supersetTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"
        app:boxStrokeColor="@color/text_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addSupersetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hago un scroll para contener los elementos -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/supersetTitleEditText"
        app:layout_constraintBottom_toTopOf="@id/confirmSupersetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <!-- Contenedor para la lista de ejercicios -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Listo los elementos -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercise_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_to_list_exercise" />
        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/confirmSupersetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/primary_variant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backToSupersetListButton"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"/>

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/backToSupersetListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
