<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/exercise_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Press militar"
                android:layout_marginBottom="8dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/exercise_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen de el ejercicio"
                tools:srcCompat="@tools:sample/avatars"
                />

            <TextView
                android:id="@+id/exercise_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/text_secondary"
                android:text="4 x 12"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/exercise_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/text_secondary"
                android:text="Rest Pause de 45 segundos"
                android:textSize="15sp"
                />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Botón para borrar -->
            <Button
                style="@style/Widget.Material3.Button"
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/text_primary"
                android:backgroundTint="@color/primary"
                android:text="@string/delete"
                android:textSize="15sp"/>

            <!-- Botón para actualizar -->
            <Button
                style="@style/Widget.Material3.Button"
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text_primary"
                android:backgroundTint="@color/secondary_variant"
                android:text="@string/update"
                android:textSize="15sp"/>

            <!-- Botón para compartir -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_row="0"
                android:layout_column="3"
                android:backgroundTint="@color/accent"
                app:cornerRadius="28dp"
                app:icon="@drawable/ic_share"
                app:iconTint="@color/white"
                android:text="@string/share"
                android:padding="15dp"/>

        </GridLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
